# taipan

./: Cargo.toml  README.md  justfile
.github/workflows/: web.yaml
benches/: benchmarks.rs
crates/taipan-changelog/: Cargo.toml
crates/taipan-changelog/src/: main.rs
crates/taipan-wasm/: Cargo.toml
crates/taipan-wasm/src/: lib.rs
examples/: basic.py
src/: arguments.rs  ast.rs  builtin.rs  builtins.rs  code.rs  code_builder.rs  compiler.rs  context.rs  control_flow.rs  dict_key.rs  dict_object.rs  error.rs  expr_ext.rs  frame.rs  function.rs  heap.rs  heap_object.rs  instruction.rs  iterator.rs  label.rs  lib.rs  machine.rs  main.rs  number_key.rs  obj_ref.rs  object.rs  object_display.rs  op.rs  operator_ext.rs  pass.rs  pipeline.rs  scope.rs  scope_kind.rs  scope_stack.rs  stmt_ext.rs  symbol.rs  symbol_table.rs  vm.rs
src/pass/: collect_symbols.rs  emit_bytecode.rs  lower.rs  lower_ast.rs  validate_syntax.rs
tests/: integration.rs
www/: .eslintrc.cjs  .gitignore  .prettierignore  index.html  package.json  vite.config.ts
www/src/: App.tsx  index.css  main.tsx
www/src/components/: about-dialog.tsx  editor-pane.tsx  editor-settings-dialog.tsx  editor.tsx  result-pane.tsx
www/src/components/ui/: button.tsx  dialog.tsx  label.tsx  resizable.tsx  select.tsx  switch.tsx  tabs.tsx  tooltip.tsx
www/src/hooks/: use-editor-extensions.tsx  use-persisted-state.tsx
www/src/lib/: bytecode.ts  types.ts  utils.ts  wasm.ts
www/src/providers/: editor-settings-provider.tsx
