[package]
name = "taipan"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = "0.2.19"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", version = "0.0.0" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", version = "0.0.0" }
snafu = "0.9.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
wildcard_imports = "allow"

[lints.rust]
unreachable_pub = "deny"

[profile.release]
lto = true
codegen-units = 1
