[package]
name = "taipan"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[workspace]
members = [".", "crates/*"]
resolver = "2"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
wildcard_imports = "allow"

[workspace.lints.rust]
unreachable_pub = "deny"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
num-traits = "0.2.19"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", version = "0.0.0" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", version = "0.0.0" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", version = "0.0.0" }
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.9.0"
typeshare = "1.0.5"

[dev-dependencies]
criterion = "0.8.2"
executable-path = "1.0.1"
indoc = "2.0.7"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
unindent = "0.2.4"

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "benchmarks"
harness = false
