[package]
name = "taipan-wasm"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
serde-wasm-bindgen = "0.6.5"
taipan = { version = "0.1.0", path = "../.." }
wasm-bindgen = "0.2.120"

[dev-dependencies]
serde_json = "1.0.149"
